# feyti-ai4health

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend/app/api/routes/: __init__.py  chat.py  documents.py  dossier.py
backend/app/core/: config.py  exceptions.py
backend/app/models/: schemas.py
backend/app/services/: classification_service.py  ctd_map.py  ctd_structure.py  document_parser.py  document_processor.py  dossier_service.py  export_service.py  gemini_service.py  generation_service.py  llm.py  readiness_service.py
backend/tests/: test_pipeline.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/review/: page.tsx
frontend/components/: dossier-tree.tsx
specs/: ai-readiness-analysis.md  dossier-generation-review-export.md
tasks/: plan.md
